1.1.1:
- added keyboard support for menu (2022/12/26 MS)
- added test functionality to editor (2022/12/24 MS)

1.1:
- added editor (2022/11/05 MS)
- added swedish translation (2022/07/22 Sanchez)

1.0.10:
- config option for setting directory for user-specific data (2022/04/23 MS)
- added french translation (2022/04/23 Pierre Faucillon)

1.0.9:
- fixed texture problem with old hardware (2022/03/02 MS)

1.0.8:
- fixed instant set selection in custom set dialog (2021/08/08 MS) 
- added paddle acceleration for keys/gamepad (2021/08/08 MS)
- added missing cross compiling stuff (2021/04/07 MS)

1.0.7:
- simplified cross compiling (2021/04/06 MS)
- added difficulty "very easy" (2021/04/04 MS)
- added gamepad support (2021/04/04 MS)
- added option to restart level (2021/04/03 MS)
- adjusted Kids difficulty (2021/04/03 MS)

1.0.6:
- fixed crash with 4k resolution (2019/12/27 MS)

1.0.5:
- added full german translation (2019/09/02 Wuzzy)
- automatic ball turbo disabled by default (2019/05/13 MS)
- fixed bug in input handling (2019/05/13 MS)
- fixed a typo (2019/05/12 Enrico Bella)

1.0.4:
- fixed crash in fps computation (2019/03/08 MS)
- added stereo sound (2019/03/07 MS)
- added shine effect (2019/03/07 MS)
- fixed computing geometry to work with non 16:9 screen ratio (2019/03/06 MS)
- fixed crash for non 16:9 resolutions (2019/03/06 MS)
- wait for p only in pause to allow switching away from window (2019/03/05 MS)
- properly mute sound on startup if disabled (2019/02/05 MS)

1.0.3:
- re-enabled Freakout superset 
- optimized menu rendering by using labels
- properly wait for release of keys and buttons
- re-enabled and improved mini games

1.0.2:
- added option to destroy single bricks as workaround for bad levels
- added option for absolute mouse input
- fixed bug in level set preview

1.0.1:
- smoother auto speed transition for balls
- sort file names directly when reading directory
- optimize code by default (--enable-debug required for debug info)