@@ -100,11 +100,20 @@ Hiscores::Hiscores()
 	int l, s;
 	string prefix;
 
+	/* set path to highscores file */
 	fname = string(HISCOREDIR) + "/lbreakouthd.hscr";
+	if (!fileIsWriteable(fname)) {
+		/* if not found or permission denied we can't use global
+		 * highscores file so fallback to home directory */
+		_loginfo("No permission to access global highscores\n");
+		fname = getHomeDir() + "/" + CONFIGDIR + "/lbreakouthd.hscr";
+		_loginfo("Falling back to %s\n",fname.c_str());
+	}
 	if (!fileExists(fname)) {
-		_loginfo("No hiscores file yet.\n");
+		_loginfo("No hiscores file yet\n");
 		return; /* no hiscores yet */
 	}
+
 	_loginfo("Loading hiscores %s\n",fname.c_str());
 
 	FileParser fp(fname);
